# hush

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  flake.nix  hush
.github/workflows/: ci.yml  release.yml
crates/hush-app/: Cargo.toml  build.rs
crates/hush-app/assets/: fonts.css
crates/hush-app/src/: ipc.rs  main.rs  service.rs  state.rs  style.rs  tray.rs  window.rs
crates/hush-app/src/components/: eula.rs  freq_page.rs  main_page.rs  mod.rs  settings_page.rs  setup_page.rs  shell.rs
crates/hush-core/: Cargo.toml
crates/hush-core/src/: ipc.rs  lib.rs  model.rs  sdk.rs
crates/hush-engine/: Cargo.toml  build.rs
crates/hush-engine/src/: engine.rs  lib.rs
nix/: hm-module.nix  package.nix
packaging/aur/hush/: .SRCINFO  PKGBUILD
packaging/aur/hush-bin/: .SRCINFO  PKGBUILD
packaging/aur/hush-mic/: .SRCINFO  PKGBUILD
packaging/aur/hush-mic-bin/: .SRCINFO  PKGBUILD
packaging/flatpak/: hush.flatpakrepo  hush.gpg  io.github.umceko.hush.json
scripts/: gen-flatpak-key.sh  make-sdk-tarballs.sh  vendor-fonts.sh
src/: engine.rs  lib.rs
