[workspace]
resolver = "2"
members = ["crates/hush-core", "crates/hush-engine", "crates/hush-app"]

[workspace.package]
version = "1.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/UMCEKO/hush"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"
zstd = "0.13"
pipewire = { version = "0.10", features = ["v0_3_49"] }
ringbuf = "0.5"
ctrlc = "3.5"
rustfft = "6"
hound = "3.5"
png = "0.18"
# ksni 0.3 changed the spawn API (async TrayMethods) — bump deliberately, with code.
ksni = "0.2"
# Last gtk3 release of the gtk-rs stack; pinned to what tao/wry link against.
gtk = "0.18"
glib = "0.18"
# Pinned exact: blitz-dom 0.3.0-alpha.5 requires image =0.25.6.
image = { version = "=0.25.6", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.22"

hush-core = { path = "crates/hush-core" }
hush-engine = { path = "crates/hush-engine" }

# Bleeding-edge Dioxus (Blitz 0.3.0-alpha.5 stack) pinned to UMCEKO forks so
# off-machine builds (CI, Nix, AUR) reproduce the exact alpha revs without any
# local checkout. The dioxus PR branch moves, so we pin by full SHA on our fork.
dioxus = { git = "https://github.com/UMCEKO/dioxus", rev = "555b9516b0b70800c13f0f44e51c4f13d53c15ef", features = ["desktop"] }
dioxus-native = { git = "https://github.com/UMCEKO/dioxus", rev = "555b9516b0b70800c13f0f44e51c4f13d53c15ef" }

# Blitz alpha.5 with UMCEKO's merged PRs (incl. the button-center fix on hush-stable).
# debug_timer is patched to the same git source so it doesn't resolve from BOTH
# crates.io and the blitz repo — that dual source breaks nix's importCargoLock
# vendoring (it keys by name-version and collides).
[patch.crates-io]
debug_timer = { git = "https://github.com/UMCEKO/blitz", rev = "56ec6bff4260039bdb205fb0e3b4f547a783958d" }
blitz-dom = { git = "https://github.com/UMCEKO/blitz", rev = "56ec6bff4260039bdb205fb0e3b4f547a783958d" }
blitz-html = { git = "https://github.com/UMCEKO/blitz", rev = "56ec6bff4260039bdb205fb0e3b4f547a783958d" }
blitz-net = { git = "https://github.com/UMCEKO/blitz", rev = "56ec6bff4260039bdb205fb0e3b4f547a783958d" }
blitz-paint = { git = "https://github.com/UMCEKO/blitz", rev = "56ec6bff4260039bdb205fb0e3b4f547a783958d" }
blitz-shell = { git = "https://github.com/UMCEKO/blitz", rev = "56ec6bff4260039bdb205fb0e3b4f547a783958d" }
blitz-traits = { git = "https://github.com/UMCEKO/blitz", rev = "56ec6bff4260039bdb205fb0e3b4f547a783958d" }

