[package]
name = "hush-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hush"
path = "src/main.rs"

[dependencies]
hush-core.workspace = true
anyhow.workspace = true
serde_json.workspace = true
libc.workspace = true
tokio.workspace = true
png = "0.17"
ksni = "0.2"
# Same gtk stack tao/wry are on: direct window show/hide that bypasses the
# webview (see set_window_visible_from_any_thread).
gtk = "0.18"
glib = "0.18"
dioxus.workspace = true
dioxus-native = { workspace = true, optional = true }
image = { version = "=0.25.6", optional = true, default-features = false, features = ["jpeg", "png", "webp"] }

[build-dependencies]
base64 = "0.22"

# UI: webview by default; Blitz (native/wgpu) via the `blitz` feature + NV_MAXINE_BLITZ=1.
[features]
default = []
blitz = ["dep:dioxus-native", "dep:image"]
