[package]
name = "hush-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hush"
path = "src/main.rs"

[dependencies]
hush-core.workspace = true
anyhow.workspace = true
serde_json.workspace = true
libc.workspace = true
tokio.workspace = true
png.workspace = true
ksni.workspace = true
# Same gtk stack tao/wry are on: direct window show/hide that bypasses the
# webview (see set_window_visible_from_any_thread).
gtk.workspace = true
glib.workspace = true
dioxus.workspace = true
dioxus-native = { workspace = true, optional = true }
image = { workspace = true, optional = true }

[build-dependencies]
base64.workspace = true

# UI: webview by default; Blitz (native/wgpu) via the `blitz` feature + NV_MAXINE_BLITZ=1.
[features]
default = []
blitz = ["dep:dioxus-native", "dep:image"]
