[package]
name = "hush-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
sha2.workspace = true
reqwest.workspace = true
tar.workspace = true
zstd.workspace = true
