[package]
name = "hush-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "hush_engine"

[dependencies]
hush-core.workspace = true
anyhow.workspace = true
serde_json.workspace = true
pipewire.workspace = true
ringbuf.workspace = true
ctrlc.workspace = true
rustfft.workspace = true
hound.workspace = true
tokio.workspace = true
